Fix scrollbar

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -39,7 +39,6 @@ html body {
 #__next {
 	width: 100%;
 	height: 100%;
-	max-width: 1200px;
 	margin-left: auto;
 	margin-right: auto;
 	padding: 0px 16px 0px 16px;
